--- a/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/styles.css
+++ b/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/styles.css
@@ -1,3 +1,29 @@
-h2{
+/* Règle CSS spécifique : Il prend la règle la plus spécifique dans se cas, 
+    c'est le h1 spécifier avec la classe "title-big"*/
+
+.title-big {
     color: red;
+}
+
+/* Règle CSS : Dans ce cas ci, il prend la dernière règle à appliquer sur tous les h1, 
+    càd la couleur blueviolet */
+
+h1 {
+    color: green;
+    color: blueviolet;
+}
+
+/* Combinaison descendante */
+
+table h2 {
+    color: red;
+}
+/* Combinance : Enfant direct */
+
+td > h2 {
+    color: aqua;
+}
+
+h2 {
+    color: green;
 }
